# api/api/docs/swagger.json
@@ -949,7 +949,7 @@
                 "tags": [
                     "RolePermission"
                 ],
-                "summary": "Delete Role Permission By Role ID",
+                "summary": "Update Role Permission",
                 "parameters": [
                     {
                         "type": "string",
@@ -964,7 +964,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/usecase.DeleteRolePermissionByRoleIDInputDTO"
+                            "$ref": "#/definitions/usecase.CreateRolePermissionInputDTO"
                         }
                     }
                 ],
@@ -1021,6 +1021,59 @@
                         "schema": {
                             "$ref": "#/definitions/usecase.CreateRolePermissionInputDTO"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Update Role Permission",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RolePermission"
+                ],
+                "summary": "Delete Role Permission By Role ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Role ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1651,14 +1704,6 @@
                 "password": {
                     "type": "string"
                 },
-                "role_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "usecase.DeleteRolePermissionByRoleIDInputDTO": {
-            "type": "object",
-            "properties": {
                 "role_id": {
                     "type": "integer"
                 }
